# PromptCLI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
promptcli/: __init__.py  cli.py  config.py  core.py  key_manager.py  settings.py  ui.py
tests/: test_cli.py  test_core.py  test_key_manager.py
