[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptcli"
version = "1.0.0"
description = "A modern Python CLI for Managing AI Prompts using Google GenAI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    { name = "Indrajit Ghosh", email = "indrajit.ghosh@iitk.ac.in" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-genai>=2.10.0",
    "typer>=0.26.8",
    "rich>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/indrajitghosh/promptcli"
Repository = "https://github.com/indrajitghosh/promptcli.git"

[project.scripts]
promptcli = "promptcli.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = ["scratch", ".venv", "ai-prompts"]
